# PaerSearchAgent

./: .gitignore  README.md  pyproject.toml
docs/: agent_runtime.md  architecture.md  usage.md
examples/spilterlize_norm_edger/: task.md
paperskills/: __init__.py
paperskills/agents/: __init__.py  live_paper_discovery_runner.py  llm_env.py  papertoskill_agent.py  prompts.py  r_task_env.py  rollout.py  submission_validator.py
paperskills/v2/: __init__.py  cli.py  discovery_tools.py  domain_router.py  models.py  orchestrator.py  skill_renderer.py  technical_docs.py
