[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-search-agent"
version = "0.1.0"
description = "PaperToSkill agents for paper-first and technical-document-grounded scientific code generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pdfplumber>=0.10",
  "PyPDF2>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
papertoskill-v1 = "paperskills.library.cli:main"
papertoskill-v2 = "paperskills.v2.cli:main"

[tool.setuptools.packages.find]
include = ["paperskills*"]

